2006-06-06  Per Bothner  <per@bothner.com>

	* srfi-64-test.scm: Updates for srfi-64 implementation changes.

2006-05-25  Per Bothner  <per@bothner.com>

	* cycle1.scm: New test fiels for mutually dependent modules.
	* cycle2.scm: The other module.
	* obj-test.scm: Test that cycle works.
	* Makefile.am: Update for new tests and files.
	(check-obj): Test that cycle works.
	(inlining.log): Also test quite quality of cycl1 and cycle2.
	* inlining.expected: Add expected sizes for new methods.

2006-05-20  Per Bothner  <per@bothner.com>

	* module2.scm: Fix typo <a8711> -> <A8711> in module-export.

2006-05-15  Per Bothner  <per@bothner.com>

	* use-slots.scm (run-me): When a slot-ref is used and the field is
	accessible use that in preference to the getter method.

2006-04-14  Per Bothner  <per@bothner.com>

	* mac-test-scm: Some new tests from srfi-72.

2006-03-27  Dean Ferreyra <dferreyra@igc.org>
	    Per Bothner  <per@bothner.com>

	* Base.java: New interface.
	* ASupport.java: New module.
	* use-slots.scm: New test-suite.
	* Makefile.am: Update to build and run new test.

2006-03-15  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql: Update declare xmlspace -> boundary-space.

2006-03-14  Per Bothner  <per@bothner.com>

	* formatst.scm: Some changes in expected output.

2006-02-21  Donovan Kolbly <donovan@rscheme.org>
            Per Bothner  <per@bothner.com>

	* srfi-64-test.scm: New _meta-test-suite" for testing srfi-64.
        * Makefile.am: Update accordingly.

2006-02-21  Per Bothner  <per@bothner.com>

	* arr-test.scm: Rewrite to use srfi-64 framework.
	* Makefile.am: Update accordingly.

2006-02-16  Per Bothner  <per@bothner.com>

	* moduleFT.scm: A number of definitions and references to variables
	with colons in their names.
	* misc-test.scm: Test it.

	* inlining-test.scm (tohex2, tohex2): More inlining tests.
	* inlining.expected: Update accordingly.

2006-02-10  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dferreyra@igc.org>
