@@ -1,3 +1,9 @@
+2006-06-09  Per Bothner  <per@bothner.com>
+
+	* obj-test.scm: Test new colon motation of types created by
+	make-record-type, rather than function-call notation, which is
+	going away once Record no longer inherits from Procedure1.
+
 2006-06-06  Per Bothner  <per@bothner.com>
 
 	* srfi-64-test.scm: Updates for srfi-64 implementation changes.
